apps/comfyui/comfyui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  labels:
    app: comfyui
spec:
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      labels:
        app: comfyui
    spec:
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu.present
                operator: Exists
      tolerations:
      - effect: NoSchedule
        key: node.mmontes.io/type
        value: compute-xlarge
      containers:
      - name: comfyui
        image: ghcr.io/mmontes11/comfyui:v0.39.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8188
        command:
        - /bin/bash
        - -c
        - |
          python3 main.py --listen 0.0.0.0 --reserve-vram 1 --async-offload --use-sage-attention --enable-manager
        volumeMounts:
        - name: models
          mountPath: /app/models
        - name: nodes
          mountPath: /app/custom_nodes
        - name: user
          mountPath: /app/user
        - name: nas
          mountPath: /app/input
          subPath: input
        - name: nas
          mountPath: /app/output
          subPath: output
        resources:
          requests:
            cpu: 1
            memory: 8Gi
          limits:
            memory: 48Gi
            nvidia.com/gpu: "1"
      # livenessProbe:
        #   httpGet:
        #     path: /queue
        #     port: http
        #   initialDelaySeconds: 30
        #   periodSeconds: 15
        #   failureThreshold: 3
        # readinessProbe:
        #   httpGet:
        #     path: /queue
        #     port: http
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   failureThreshold: 3
      volumes:
      - name: models
        persistentVolumeClaim:
          claimName: comfyui-models
      - name: nodes
        persistentVolumeClaim:
          claimName: comfyui-nodes
      - name: user
        persistentVolumeClaim:
          claimName: comfyui
      - name: nas
        nfs:
          path: /volume1/comfyui
          server: 10.0.0.50
