apps/comfyui/comfyui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui
spec:
  selector:
    app: comfyui
  ports:
    - protocol: TCP
      port: 8188
      targetPort: http
  type: ClusterIP
