apps/comfyui/comfyui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: comfyui
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "comfyui.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - name: comfyui
          port: 8188
